{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 108,
  "lineage": "8925c23a-b818-3dbb-bbd5-ef99b6e1cc7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0901dcb30953a0ea6",
            "arn": "arn:aws:ec2:us-east-1:784055307315:elastic-ip/eipalloc-0901dcb30953a0ea6",
            "association_id": "eipassoc-00ea923319602b03b",
            "domain": "vpc",
            "id": "eipalloc-0901dcb30953a0ea6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f9a65cf41c376a01",
            "private_dns": "ip-10-0-1-196.ec2.internal",
            "private_ip": "10.0.1.196",
            "public_dns": "ec2-107-22-181-231.compute-1.amazonaws.com",
            "public_ip": "107.22.181.231",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-nat-eip"
            },
            "tags_all": {
              "Name": "hireflow-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "eipalloc-0901dcb30953a0ea6",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hireflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:internet-gateway/igw-0e39700b777b675c3",
            "id": "igw-0e39700b777b675c3",
            "owner_id": "784055307315",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-igw"
            },
            "tags_all": {
              "Name": "hireflow-igw"
            },
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "igw-0e39700b777b675c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hireflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0901dcb30953a0ea6",
            "association_id": "eipassoc-00ea923319602b03b",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fa965770241c0ec2",
            "network_interface_id": "eni-0f9a65cf41c376a01",
            "private_ip": "10.0.1.196",
            "public_ip": "107.22.181.231",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f64d9459356278f9",
            "tags": {
              "Name": "hireflow-nat"
            },
            "tags_all": {
              "Name": "hireflow-nat"
            },
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "nat-0fa965770241c0ec2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.hireflow",
            "aws_subnet.public_1",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013089559d842c3da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fa965770241c0ec2",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-013089559d842c3da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-013089559d842c3da"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.hireflow",
            "aws_nat_gateway.hireflow",
            "aws_route_table.private",
            "aws_subnet.public_1",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e39700b777b675c3",
            "id": "r-rtb-025ba621e5866d35d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-025ba621e5866d35d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-025ba621e5866d35d"
          },
          "dependencies": [
            "aws_internet_gateway.hireflow",
            "aws_route_table.public",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:route-table/rtb-013089559d842c3da",
            "id": "rtb-013089559d842c3da",
            "owner_id": "784055307315",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa965770241c0ec2",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hireflow-private-rt"
            },
            "tags_all": {
              "Name": "hireflow-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "rtb-013089559d842c3da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:route-table/rtb-025ba621e5866d35d",
            "id": "rtb-025ba621e5866d35d",
            "owner_id": "784055307315",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e39700b777b675c3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hireflow-public-rt"
            },
            "tags_all": {
              "Name": "hireflow-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "rtb-025ba621e5866d35d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f997ff5c40e88bc2",
            "region": "us-east-1",
            "route_table_id": "rtb-013089559d842c3da",
            "subnet_id": "subnet-02b84a5f04403068b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "rtbassoc-0f997ff5c40e88bc2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bade515b6eeac3c",
            "region": "us-east-1",
            "route_table_id": "rtb-013089559d842c3da",
            "subnet_id": "subnet-0d75af4e463e843e8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "rtbassoc-04bade515b6eeac3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016316235e4c758d9",
            "region": "us-east-1",
            "route_table_id": "rtb-025ba621e5866d35d",
            "subnet_id": "subnet-0f64d9459356278f9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "rtbassoc-016316235e4c758d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e5841a98f05730c",
            "region": "us-east-1",
            "route_table_id": "rtb-025ba621e5866d35d",
            "subnet_id": "subnet-07fd21853a2bead25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "rtbassoc-03e5841a98f05730c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group/sg-03fe5f52978cf2332",
            "description": "Security group for the HireFlow load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fe5f52978cf2332",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hireflow-alb-sg",
            "name_prefix": "",
            "owner_id": "784055307315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hireflow-alb-sg"
            },
            "tags_all": {
              "Name": "hireflow-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sg-03fe5f52978cf2332",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group/sg-02129fd2edb5693f5",
            "description": "Security group for HireFlow application workloads",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02129fd2edb5693f5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03fe5f52978cf2332"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "hireflow-app-sg",
            "name_prefix": "",
            "owner_id": "784055307315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hireflow-app-sg"
            },
            "tags_all": {
              "Name": "hireflow-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sg-02129fd2edb5693f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group/sg-080c64b2072d63681",
            "description": "Security group for HireFlow PostgreSQL and Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080c64b2072d63681",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02129fd2edb5693f5"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02129fd2edb5693f5"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "hireflow-data-sg",
            "name_prefix": "",
            "owner_id": "784055307315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hireflow-data-sg"
            },
            "tags_all": {
              "Name": "hireflow-data-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sg-080c64b2072d63681",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:subnet/subnet-02b84a5f04403068b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b84a5f04403068b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784055307315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-private-1"
            },
            "tags_all": {
              "Name": "hireflow-private-1"
            },
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "subnet-02b84a5f04403068b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:subnet/subnet-0d75af4e463e843e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d75af4e463e843e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "784055307315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-private-2"
            },
            "tags_all": {
              "Name": "hireflow-private-2"
            },
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "subnet-0d75af4e463e843e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:subnet/subnet-0f64d9459356278f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f64d9459356278f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784055307315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-public-1"
            },
            "tags_all": {
              "Name": "hireflow-public-1"
            },
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "subnet-0f64d9459356278f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:subnet/subnet-07fd21853a2bead25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fd21853a2bead25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "784055307315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-public-2"
            },
            "tags_all": {
              "Name": "hireflow-public-2"
            },
            "vpc_id": "vpc-096e493763835a2a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "subnet-07fd21853a2bead25",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hireflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:vpc/vpc-096e493763835a2a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09288ce7fbd45b464",
            "default_route_table_id": "rtb-04b1b66ef35a0c1d9",
            "default_security_group_id": "sg-03f863a464fc8053b",
            "dhcp_options_id": "dopt-0046865c1e45c5cbe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-096e493763835a2a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b1b66ef35a0c1d9",
            "owner_id": "784055307315",
            "region": "us-east-1",
            "tags": {
              "Name": "hireflow-vpc"
            },
            "tags_all": {
              "Name": "hireflow-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "vpc-096e493763835a2a3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-00108d39f2bd3c3c7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00108d39f2bd3c3c7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03fe5f52978cf2332",
            "security_group_rule_id": "sgr-00108d39f2bd3c3c7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-00108d39f2bd3c3c7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-0bb0bb069259d7310",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bb0bb069259d7310",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-02129fd2edb5693f5",
            "security_group_rule_id": "sgr-0bb0bb069259d7310",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-0bb0bb069259d7310",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "data_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-00ceaf6524a528028",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00ceaf6524a528028",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-080c64b2072d63681",
            "security_group_rule_id": "sgr-00ceaf6524a528028",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-00ceaf6524a528028",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.data",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-0839b03b710effdc7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0839b03b710effdc7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03fe5f52978cf2332",
            "security_group_rule_id": "sgr-0839b03b710effdc7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-0839b03b710effdc7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-056d22f0288f8198c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-056d22f0288f8198c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-03fe5f52978cf2332",
            "security_group_rule_id": "sgr-056d22f0288f8198c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-056d22f0288f8198c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-015ab6b8be1b2d5e4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-015ab6b8be1b2d5e4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03fe5f52978cf2332",
            "region": "us-east-1",
            "security_group_id": "sg-02129fd2edb5693f5",
            "security_group_rule_id": "sgr-015ab6b8be1b2d5e4",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-015ab6b8be1b2d5e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "postgres_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-02d8cf3d222c0216d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-02d8cf3d222c0216d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02129fd2edb5693f5",
            "region": "us-east-1",
            "security_group_id": "sg-080c64b2072d63681",
            "security_group_rule_id": "sgr-02d8cf3d222c0216d",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-02d8cf3d222c0216d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.data",
            "aws_vpc.hireflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:784055307315:security-group-rule/sgr-07c31b62154d7f58b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6379,
            "id": "sgr-07c31b62154d7f58b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-02129fd2edb5693f5",
            "region": "us-east-1",
            "security_group_id": "sg-080c64b2072d63681",
            "security_group_rule_id": "sgr-07c31b62154d7f58b",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "784055307315",
            "id": "sgr-07c31b62154d7f58b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.data",
            "aws_vpc.hireflow"
          ]
        }
      ]
    }
  ]
}